tests/ui/function-body.rs
use ghost::phantom;

fn main() {
    #[phantom]
    struct MyPhantom<T: ?Sized>;
}
